# mdt-dialout-collector

./: CMakeLists.txt  install.sh
proto/: Makefile.am
proto/Juniper/: juniper_gnmi.proto  juniper_gnmi_ext.proto
proto/Nokia/: nokia_dialout.proto  nokia_gnmi.proto
src/: mdt_dialout_collector.cc
src/bridge/: grpc_collector_bridge.cc  grpc_collector_bridge.h
src/cfgWrapper/: cfg_wrapper.cc  cfg_wrapper.h
src/core/: mdt_dialout_core.cc  mdt_dialout_core.h
src/dataManipulation/: data_manipulation.cc  data_manipulation.h
src/proto/: Makefile.am
src/utils/: cfg_handler.cc  cfg_handler.h
